alignment fix - safari (mobile)

--- a/css/paginator.css
+++ b/css/paginator.css
@@ -15,8 +15,6 @@ button {
     cursor: pointer;
     transform: translate3d(0, 0, 0);
     position: absolute;
-    top: 18%;
-    margin-top: -20px;
     -webkit-filter: drop-shadow(0 2px 0px rgba(0, 0, 0, 0.2));
 }
 
