--- a/css/pstv.css
+++ b/css/pstv.css
@@ -162,5 +162,5 @@ li {
 }
 
 .paginate {
-    top: 175px;
+    top: 155px;
 }
